<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fps_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yh@todo.todo">yh</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
